# citnega

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  README.md  citnega_technical_specification.txt  import-linter.ini  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml  security.yml
apps/cli/: _async.py  bootstrap.py  main.py
apps/cli/commands/: approve.py  config.py  doctor.py  jobs.py  kb.py  migrate.py  remote.py  replay.py  run.py  schedule.py  session.py
apps/tui/: app.py
apps/tui/controllers/: chat_controller.py
apps/tui/screens/: chat_screen.py  history_screen.py  session_picker.py  settings_screen.py  slash_screen.py
apps/tui/slash_commands/: builtin.py  wizard_base.py  workspace.py
apps/tui/themes/: default.py
apps/tui/widgets/: agent_call_block.py  approval_block.py  coding_block.py  config_bar.py  context_bar.py  message_block.py  option_picker_block.py  plan_approval_block.py  slash_popup.py  smart_input.py  status_bar.py  streaming_block.py  thinking_block.py  tool_call_block.py  welcome_banner.py
apps/tui/workers/: event_consumer.py
docs/: architecture-diagram.mmd  architecture.md  citnega_nextgen.md  custom_adapter_onboarding.md  doctor_schema.md  migration_notes.md  release_checklist.md  remote_worker_key_rotation_playbook.md  remote_worker_service.md  spec_9plus.md  spec_9plus_tracker.md  traceability_matrix.md
docs/decisions/: ADR-0001-framework-agnosticism.md  ADR-0002-sqlite-wal.md  ADR-0003-platformdirs.md  ADR-0004-keyring.md  future.md
docs/evidence/: 9plus_scorecard_20260414T163934Z.json  9plus_scorecard_20260414T163934Z.md  9plus_scorecard_20260414T165326Z.json  9plus_scorecard_20260414T165326Z.md  9plus_scorecard_20260414T204314Z.json  9plus_scorecard_20260414T204314Z.md  9plus_scorecard_20260415T021929Z.json  9plus_scorecard_20260415T021929Z.md  9plus_scorecard_20260415T023447Z.json  9plus_scorecard_20260415T023447Z.md  9plus_scorecard_20260415T023615Z.json  9plus_scorecard_20260415T023615Z.md  README.md  benchmark_matrix_20260414T165306Z_darwin-py3.13.5.json  benchmark_matrix_20260414T165306Z_darwin-py3.13.5.md  benchmark_matrix_20260414T204307Z_darwin-py3.13.5.json  benchmark_matrix_20260414T204307Z_darwin-py3.13.5.md  benchmark_matrix_20260414T204457Z_darwin-py3.13.5.json  benchmark_matrix_20260414T204457Z_darwin-py3.13.5.md  benchmark_matrix_20260415T021913Z_darwin-py3.13.5.json  benchmark_matrix_20260415T021913Z_darwin-py3.13.5.md  benchmark_matrix_20260415T023440Z_darwin-py3.13.5.json  benchmark_matrix_20260415T023440Z_darwin-py3.13.5.md  benchmark_matrix_history.jsonl  benchmark_publication_20260415T023440Z_darwin-py3.13.5.json  benchmark_publication_history.jsonl  benchmark_publication_latest.md  benchmark_thresholds.json  horizontal_demos_20260414T163928Z.json  horizontal_demos_20260414T163928Z.md  horizontal_demos_20260414T165324Z.json  horizontal_demos_20260414T165324Z.md  horizontal_demos_20260414T204312Z.json  horizontal_demos_20260414T204312Z.md  horizontal_demos_20260415T021923Z.json  horizontal_demos_20260415T021923Z.md  horizontal_demos_20260415T023447Z.md  horizontal_demos_latest.json
python/: generate_travel_guide.py
scripts/: build_release.sh  demo_agentic_conversation.py  dev_setup.sh  generate_9plus_scorecard.py  replay.py  run_benchmark_matrix.py  run_horizontal_demos.py  run_migrations.sh
tests/: conftest.py
tests/adapters/: shared_suite.py  test_adk_adapter.py  test_crewai_adapter.py  test_langgraph_adapter.py  test_stub_adapter.py
tests/fixtures/: __init__.py  db_factory.py  key_store.py  path_resolver.py  stub_adapter.py
tests/fixtures/remote_tls/: ca-cert.pem  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
tests/integration/: conftest.py  test_autonomous_agent_e2e.py  test_execution_backends.py  test_golden_scenarios.py  test_mcp_integration.py  test_mental_models_integration.py  test_messaging_integration.py  test_new_specialists_e2e.py  test_orchestration_improvements.py  test_orchestrator_golden.py  test_p2_capabilities.py  test_section10_integration.py  test_skills_coverage.py  test_skills_integration.py  test_smoke.py  test_tool_agent_integration.py
tests/integration/bootstrap/: test_bootstrap.py
tests/integration/cli/: test_cli.py
tests/integration/kb/: test_kb_integration.py
tests/integration/runtime/: test_compaction.py  test_core_runtime.py  test_nextgen_pipeline.py  test_remote_soak.py
tests/integration/workspace/: test_create_and_register.py  test_onboarding_gate.py
tests/performance/: test_repo_map_latency.py  test_scheduler_overhead.py  test_search_files_latency.py
tests/tui/: test_tui.py
tests/unit/adapters/: test_crewai_runner.py  test_direct_adapter.py  test_direct_runner.py  test_direct_runner_parallel.py
tests/unit/agents/: test_agent_input_canonicalization.py  test_agents.py  test_new_specialists.py  test_orchestration_improvements.py  test_orchestrator_agent.py  test_p2_agents.py
tests/unit/bootstrap/: test_bootstrap_failures.py  test_bootstrap_unit.py
tests/unit/capabilities/: test_providers.py  test_registry.py
tests/unit/cli/: test_remote_command.py  test_replay_command.py  test_run_commands.py  test_session_commands.py
tests/unit/config/: test_hardcoded_values.py  test_loaders.py  test_section10_config.py
tests/unit/execution/: test_engine.py  test_engine_improvements.py  test_scheduler.py
tests/unit/kb/: test_kb.py
tests/unit/model_gateway/: test_circuit_breaker.py  test_gateway.py  test_provider_retry.py  test_retry_jitter.py  test_token_counter.py
tests/unit/observability/: test_retention.py
tests/unit/planning/: test_classifier.py  test_validator.py  test_workflows.py
tests/unit/protocol/: test_callable_base.py  test_events.py  test_models.py  test_section10_events.py  test_session_strategy.py
tests/unit/runtime/: test_app_service.py  test_container_launcher.py  test_context.py  test_context_parallel.py  test_conversation_store.py  test_mode_registry.py  test_no_silent_failures.py  test_policy.py  test_policy_templates.py  (+6 more)
(+50 files in other folders)
