[project]
name = "citnega"
version = "0.1.0"
description = "Platform-agnostic TUI + agentic framework for general-purpose tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual>=8.2",
    "typer>=0.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "structlog>=25.0",
    "platformdirs>=4.3",
    "keyring>=25.0",
    "httpx>=0.27",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
adk       = ["google-adk>=0.1"]
langgraph = ["langgraph>=0.2"]
crewai    = ["crewai>=0.70"]
all       = ["citnega[adk,langgraph,crewai]"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.130",
    "ruff>=0.9",
    "mypy>=1.15",
    "import-linter>=2.5",
    "freezegun>=1.5",
    "sqlite-utils>=3.38",
    "pre-commit>=4.0",
]

[project.scripts]
citnega     = "citnega.apps.tui.app:main"
citnega-cli = "citnega.apps.cli.main:main"


[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["citnega"]

# ── Ruff (see ruff.toml for full config) ───────────────────────────────────────
[tool.ruff]
config = "ruff.toml"

# ── Mypy (see mypy.ini) ────────────────────────────────────────────────────────

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-ra -q"
pythonpath   = ["."]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["citnega"]
omit     = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
