[project]
name = "citnega"
version = "0.6.1"
description = "Local-first terminal AI runtime with planning, parallel tool orchestration, and workspace-extensible agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Citnega contributors" },
]
keywords = ["ai", "agent", "tui", "llm", "terminal", "assistant", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "textual>=8.2",
    "typer>=0.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "structlog>=25.0",
    "platformdirs>=4.3",
    "keyring>=25.0",
    "httpx>=0.27",
    "tiktoken>=0.8",
]

[project.urls]
Homepage   = "https://github.com/8prabhat/citnega"
Repository = "https://github.com/8prabhat/citnega"
Issues     = "https://github.com/8prabhat/citnega/issues"
Changelog  = "https://github.com/8prabhat/citnega/blob/main/CHANGELOG.md"

[project.optional-dependencies]
adk       = ["google-adk>=0.1"]
langgraph = ["langgraph>=0.2"]
crewai    = ["crewai>=0.70"]
all       = ["citnega[adk,langgraph,crewai]"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.130",
    "ruff>=0.9",
    "mypy>=1.15",
    "import-linter>=2.5",
    "freezegun>=1.5",
    "sqlite-utils>=3.38",
    "pre-commit>=4.0",
    "respx>=0.21",
]

[project.scripts]
citnega     = "citnega.apps.tui.app:main"
citnega-cli = "citnega.apps.cli.main:main"


[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["citnega"]

[tool.hatch.build.targets.wheel.force-include]
"apps" = "citnega/apps"

# ── Ruff (see ruff.toml for full config) ───────────────────────────────────────
[tool.ruff]
config = "ruff.toml"

# ── Mypy (see mypy.ini) ────────────────────────────────────────────────────────

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-ra -q --timeout=60"
pythonpath   = ["."]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["citnega"]
omit     = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
