[project]
name = "citnega"
version = "0.6.2"
description = "Local-first terminal AI runtime with planning, parallel tool orchestration, and workspace-extensible agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Prabhat Kumar" },
]
keywords = ["ai", "agent", "tui", "llm", "terminal", "assistant", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "textual>=8.2",
    "typer>=0.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "structlog>=25.0",
    "platformdirs>=4.3",
    "keyring>=25.0",
    "httpx>=0.27",
    "tiktoken>=0.8",
    "pyyaml>=6.0",
    # Utility
    "deep-translator>=1.11",
    "pdfplumber>=0.11",
    # Data analysis
    "pandas>=2.2",
    "tabulate>=0.9",
    "beautifulsoup4>=4.12",
    # Document output
    "fpdf2>=2.7",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "matplotlib>=3.9",
    "numpy>=1.26",
]

[project.urls]
Homepage   = "https://github.com/8prabhat/citnega"
Repository = "https://github.com/8prabhat/citnega"
Issues     = "https://github.com/8prabhat/citnega/issues"
Changelog  = "https://github.com/8prabhat/citnega/blob/main/CHANGELOG.md"

[project.optional-dependencies]
adk       = ["google-adk>=0.1"]
langgraph = ["langgraph>=0.2"]
crewai    = ["crewai>=0.70"]
ocr       = ["pytesseract>=0.3", "Pillow>=10.0"]
qr        = ["qrcode[pil]>=7.4"]
mcp       = ["mcp[cli]>=1.0"]
telegram  = ["python-telegram-bot>=21.0"]
discord   = ["discord.py>=2.3"]
all       = ["citnega[adk,langgraph,crewai,ocr,qr,mcp,telegram,discord]"]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.130",
    "ruff>=0.9",
    "mypy>=1.15",
    "import-linter>=2.5",
    "freezegun>=1.5",
    "sqlite-utils>=3.38",
    "pre-commit>=4.0",
    "respx>=0.21",
    "hatchling>=1.25",
    "build>=1.2",
    # Security scanning
    "bandit[toml]>=1.8",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
    "semgrep>=1.70",
]

[project.scripts]
citnega     = "citnega.apps.tui.app:main"
citnega-cli = "citnega.apps.cli.main:main"


[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["citnega"]
exclude = [
    "citnega/tests*",
    "citnega/workfolder*",
    "*.pyc",
    "__pycache__",
]

# ── Ruff (see ruff.toml for full config) ───────────────────────────────────────
[tool.ruff]
config = "ruff.toml"

# ── Mypy (see mypy.ini) ────────────────────────────────────────────────────────

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-ra -q --timeout=60"
pythonpath   = ["."]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["citnega"]
omit     = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

# ── Bandit (SAST) ───────────────────────────────────────────────────────────────
[tool.bandit]
targets    = ["citnega/packages", "citnega/apps"]
exclude_dirs = ["tests", "citnega/packages/tools/security"]   # security tools use intentional patterns
skips = [
    "B101",  # assert — fine in non-production code
    "B404",  # subprocess import — we intentionally shell out
    "B603",  # subprocess without shell — we audit call sites explicitly
    "B607",  # partial path — same as above
]
severity = "medium"   # report medium + high only
